# pyproject.toml

[build-system]
# Specify the build backend
build-backend = "mesonpy"

# List all dependencies needed *to build* the package
requires = [
    "meson-python>=0.13.0",
    "meson>=1.0.0",
    "ninja",
    "numpy>=1.20",
]

# The remaining package metadata
[project]
name = "PyAstronomy-ext"
version = "2" # You would update this from "1" in your original
description = "Optional extension for PyAstronomy."
authors = [
    {name = "PyA group", email = "stefan.czesla@hs.uni-hamburg.de"}
]
license = {text = "MIT"} # Assuming a common license
readme = "README.md"
# Dependencies needed *after installation* (runtime)
dependencies = [
    "numpy",
    "six",
]
