# pyproject.toml

[build-system]
# Specify the build backend
build-backend = "mesonpy"

# List all dependencies needed *to build* the package
requires = [
    "meson-python>=0.13.0",
    "meson>=1.0.0",
    "ninja",
    "numpy>=1.20",
]

# The remaining package metadata
[project]
name = "PyAstronomy-ext"
version = "2" # You would update this from "1" in your original
description = "Optional extension for PyAstronomy."
authors = [
    {name = "PyA group", email = "stefan.czesla@hs.uni-hamburg.de"}
]
license = {text = "MIT"} # Assuming a common license
readme = "README.md"
# Dependencies needed *after installation* (runtime)
dependencies = [
    "numpy",
    "six",
]
requires-python = ">=3.8"

[tool.cibuildwheel]
# Skip tests for now to keep it simple. By default, it would try to run
# your package's test suite, which you haven't configured.
test-command = ""

# Tell cibuildwheel to only build for Linux.
# You can remove this to build for macOS and Windows too (on those machines).
build = "cp*-manylinux*"


